[gd_scene load_steps=10 format=3 uid="uid://dqh3trwm4smod"]

[ext_resource type="Script" path="res://Control.gd" id="1_vbxgf"]
[ext_resource type="FontFile" uid="uid://c84yhbqspx8e3" path="res://font/Luminari-Regular.ttf" id="2_a410q"]

[sub_resource type="LabelSettings" id="LabelSettings_l3ewh"]
font_size = 45
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.501961)

[sub_resource type="LabelSettings" id="LabelSettings_335fy"]
font_size = 45
font_color = Color(0.423529, 0, 0.423529, 1)
outline_size = 5
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtqf8"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2tvy"]
bg_color = Color(1, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_srj8g"]
line_spacing = 1.0
font_size = 45
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.501961)

[sub_resource type="LabelSettings" id="LabelSettings_4bbdo"]
line_spacing = 1.0
font_size = 35
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.501961)

[sub_resource type="LabelSettings" id="LabelSettings_dwhf1"]
line_spacing = 1.0
font_size = 46
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.501961)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 2560.0
offset_bottom = 1440.0
script = ExtResource("1_vbxgf")

[node name="top_bar" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 2560.0
offset_bottom = 65.0
color = Color(0, 0.4, 0.4, 1)

[node name="cultist_label" type="Label" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 10.0
offset_right = 199.0
offset_bottom = 66.0
theme_override_fonts/font = ExtResource("2_a410q")
text = "Cultists:"
label_settings = SubResource("LabelSettings_l3ewh")

[node name="magic_label" type="Label" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 490.0
offset_right = 642.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("2_a410q")
text = "Magic:"
label_settings = SubResource("LabelSettings_335fy")

[node name="loyalty_label" type="Label" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 970.0
offset_right = 1151.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("2_a410q")
text = "Loyalty:"
label_settings = SubResource("LabelSettings_l3ewh")

[node name="loyalty_bar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 1150.0
offset_top = 8.0
offset_right = 1395.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_a410q")
theme_override_font_sizes/font_size = 32
theme_override_styles/background = SubResource("StyleBoxFlat_rtqf8")
theme_override_styles/fill = SubResource("StyleBoxFlat_g2tvy")

[node name="prisoners_label" type="Label" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 1410.0
offset_right = 1641.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("2_a410q")
text = "Prisoners:"
label_settings = SubResource("LabelSettings_l3ewh")

[node name="money_label" type="Label" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 1890.0
offset_right = 2064.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("2_a410q")
text = "Money:"
label_settings = SubResource("LabelSettings_l3ewh")

[node name="Cultist_Send_Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 75.0
offset_right = 514.0
offset_bottom = 210.0
color = Color(0, 0.4, 0.4, 1)

[node name="Cultist_Send_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 75.0
offset_right = 278.0
offset_bottom = 108.0
theme_override_fonts/font = ExtResource("2_a410q")
text = "Assign cultist to ritual:"
label_settings = SubResource("LabelSettings_srj8g")

[node name="Cultist_Send" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 145.0
offset_right = 268.0
offset_bottom = 176.0
scale = Vector2(2, 2)
max_value = 1e+18

[node name="Recruitment_Send_Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 225.0
offset_right = 514.0
offset_bottom = 360.0
color = Color(0, 0.4, 0.4, 1)

[node name="Recruitment_Send_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 225.0
offset_right = 349.0
offset_bottom = 258.0
theme_override_fonts/font = ExtResource("2_a410q")
text = "Assign cultist to recruitment:"
label_settings = SubResource("LabelSettings_4bbdo")

[node name="Recruitment_Send" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 295.0
offset_right = 268.0
offset_bottom = 326.0
scale = Vector2(2, 2)
max_value = 1e+18

[node name="Job_Send_Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 375.0
offset_right = 514.0
offset_bottom = 510.0
color = Color(0, 0.4, 0.4, 1)

[node name="Job_Send_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 375.0
offset_right = 271.0
offset_bottom = 408.0
theme_override_fonts/font = ExtResource("2_a410q")
text = "Assign cultist to A&W:"
label_settings = SubResource("LabelSettings_dwhf1")

[node name="Job_Send" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 445.0
offset_right = 268.0
offset_bottom = 476.0
scale = Vector2(2, 2)
max_value = 1e+18
